Adding candidate field as facet variable for solr search