@@ -36,8 +36,9 @@ public enum SearchFacet {
     ),
 
     CANDIDATE(SearchFilter.CANDIDATE, IndexConcept.CANDIDATE_FIELD,
-            Collections.singletonList(IndexConcept.CANDIDATE_FIELD),
-            new SearchFacetParameters(-1, 1, FacetOptions.FacetSort.COUNT)),
+            List.of(IndexConcept.CANDIDATE_FIELD),
+            new SearchFacetParameters(-1, 1, FacetOptions.FacetSort.COUNT)
+    ),
 
     PROPERTY_TYPE(SearchFilter.PROPERTY_TYPE, IndexConcept.TYPES_FIELD,
             Collections.singletonList(IndexConcept.TYPES_FIELD),
